overlaping fixed. aside is changed to div elemnt in main.

--- a/style.css
+++ b/style.css
@@ -78,12 +78,11 @@ div {
 }
 
 aside {
-    position: absolute;
 		width: 20%;
 		height: 100%; 
     padding-left: 20px;
     margin: 0 auto;
-    float: left;
+    position: absolute;
     
     color: white;
 		background-color:#29627e;
@@ -98,15 +97,13 @@ aside .paragrafTitle {
 article {
 	margin: 0;
 	background: green;
-	position: absolute;
-	
 }
 
-article .innerSide {
-	position: relative;
+div .innerSide {
 	height: 20%;
 	width: 80%;
-	float: right;
+	margin-top: -29px;
+	margin-left:120px;
 }
 
 .year {
